fix: make Radio halo focus transparent gap work

--- a/components/radio/index.css
+++ b/components/radio/index.css
@@ -77,20 +77,15 @@ governing permissions and limitations under the License.
   }
 
   &:checked + .spectrum-Radio-button {
-    border-width: var(--spectrum-radio-border-width-checked);
-
-    /* transtion disbabled to prevent bounce on check */
-    transition: none;
-    &:after  {
-      transition: none;
-      margin: calc(var(--spectrum-alias-focus-ring-gap) * -1 - calc(var(--spectrum-radio-border-width-checked)));
+    &:before {
+      border-width: var(--spectrum-radio-border-width-checked);
     }
   }
 
   &:focus-ring {
     + .spectrum-Radio-button {
       &:after {
-        margin: calc(var(--spectrum-alias-focus-ring-gap) * -2);
+        margin: calc(var(--spectrum-alias-focus-ring-gap) * -1);
       }
     }
   }
@@ -116,12 +111,23 @@ governing permissions and limitations under the License.
 
   flex-grow: 0;
   flex-shrink: 0;
+  &:before {
+    display: block;
+    z-index: 0;
+    content: '';
+    box-sizing: border-box;
+    position: absolute;
 
-  border-radius: var(--spectrum-radio-radius);
-  border-width: var(--spectrum-radio-circle-border-size);
-  border-style: solid;
+    width: var(--spectrum-radio-circle-diameter);
+    height: var(--spectrum-radio-circle-diameter);
 
-  transition: border var(--spectrum-global-animation-duration-100) ease-in-out, box-shadow var(--spectrum-global-animation-duration-100) ease-in-out;
+    border-radius: var(--spectrum-radio-radius);
+    border-width: var(--spectrum-radio-circle-border-size);
+    border-style: solid;
+
+    transition: border var(--spectrum-global-animation-duration-100) ease-in-out,
+                box-shadow var(--spectrum-global-animation-duration-100) ease-in-out;
+  }
 
   &:after {
     border-radius: 100%;
@@ -132,7 +138,7 @@ governing permissions and limitations under the License.
     right: 0;
     bottom: 0;
     top: 0;
-    margin: calc(var(--spectrum-alias-focus-ring-gap) * -1);
+    margin: var(--spectrum-alias-focus-ring-gap);
 
     transition: box-shadow var(--spectrum-global-animation-duration-100) ease-out,
                 margin var(--spectrum-global-animation-duration-100) ease-out;
