--- a/components/radio/skin.css
+++ b/components/radio/skin.css
@@ -12,6 +12,8 @@ governing permissions and limitations under the License.
 
 :root {
   --spectrum-radio-emphasized-focus-ring-size-key-focus: var(--spectrum-alias-focus-ring-size));
+
+  --spectrum-radio-circle-border-color-key-focus: var(--spectrum-alias-focus-ring-color);
 }
 
 .spectrum-Radio .spectrum-Radio-input {
@@ -25,20 +27,25 @@ governing permissions and limitations under the License.
 }
 
 .spectrum-Radio-button {
-  background-color: var(--spectrum-radio-emphasized-circle-background-color);
-  border-color: var(--spectrum-radio-emphasized-circle-border-color);
+  &:before {
+    background-color: var(--spectrum-radio-emphasized-circle-background-color);
+    border-color: var(--spectrum-radio-emphasized-circle-border-color);
+  }
 }
 
 .spectrum-Radio {
   &:hover {
     .spectrum-Radio-button {
-      border-color: var(--spectrum-radio-emphasized-circle-border-color-hover);
-      box-shadow: none;
+      &:before {
+        border-color: var(--spectrum-radio-emphasized-circle-border-color-hover);
+        box-shadow: none;
+      }
     }
 
     .spectrum-Radio-input:checked + .spectrum-Radio-button {
-      border-color: var(--spectrum-radio-emphasized-circle-border-color-selected-hover);
-
+      &:before {
+        border-color: var(--spectrum-radio-emphasized-circle-border-color-selected-hover);
+      }
     }
 
     .spectrum-Radio-label {
@@ -49,12 +56,15 @@ governing permissions and limitations under the License.
 
   &:active {
     .spectrum-Radio-button {
-      border-color: var(--spectrum-radio-emphasized-circle-border-color-down);
+      &:before {
+        border-color: var(--spectrum-radio-emphasized-circle-border-color-down);
+      }
     }
 
     .spectrum-Radio-input:checked + .spectrum-Radio-button {
-      border-color: var(--spectrum-radio-emphasized-circle-border-color-selected-down);
-
+      &:before {
+        border-color: var(--spectrum-radio-emphasized-circle-border-color-selected-down);
+      }
     }
 
     .spectrum-Radio-label {
@@ -65,16 +75,22 @@ governing permissions and limitations under the License.
 
 .spectrum-Radio--quiet {
   .spectrum-Radio-input:checked + .spectrum-Radio-button {
-    border-color: var(--spectrum-radio-quiet-circle-border-color-selected);
+    &:before {
+      border-color: var(--spectrum-radio-quiet-circle-border-color-selected);
+    }
   }
   &:hover {
     .spectrum-Radio-input:checked + .spectrum-Radio-button {
-      border-color: var(--spectrum-radio-quiet-circle-border-color-selected-hover);
+      &:before {
+        border-color: var(--spectrum-radio-quiet-circle-border-color-selected-hover);
+      }
     }
   }
   &:active {
     .spectrum-Radio-input:checked + .spectrum-Radio-button {
-      border-color: var(--spectrum-radio-quiet-circle-border-color-selected-down);
+      &:before {
+        border-color: var(--spectrum-radio-quiet-circle-border-color-selected-down);
+      }
     }
   }
 }
@@ -83,7 +99,9 @@ governing permissions and limitations under the License.
 .spectrum-Radio, .spectrum-Radio--quiet {
   &.is-invalid:hover {
     .spectrum-Radio-input + .spectrum-Radio-button {
-      border-color: var(--spectrum-radio-emphasized-circle-border-color-error-hover);
+      &:before {
+        border-color: var(--spectrum-radio-emphasized-circle-border-color-error-hover);
+      }
     }
     .spectrum-Radio-label {
       color: var(--spectrum-radio-emphasized-circle-border-color-error-hover);
@@ -91,15 +109,20 @@ governing permissions and limitations under the License.
   }
   &.is-invalid:active {
     .spectrum-Radio-input + .spectrum-Radio-button {
-      border-color: var(--spectrum-radio-emphasized-circle-border-color-error-down);
+      &:before {
+        border-color: var(--spectrum-radio-emphasized-circle-border-color-error-down);
+      }
     }
     .spectrum-Radio-label {
       color: var(--spectrum-radio-emphasized-circle-border-color-error-down);
     }
   }
   &.is-invalid {
-    .spectrum-Radio-button, .spectrum-Radio-input:checked + .spectrum-Radio-button {
-      border-color: var(--spectrum-radio-emphasized-circle-border-color-error);
+    .spectrum-Radio-button,
+    .spectrum-Radio-input:checked + .spectrum-Radio-button {
+      &:before {
+        border-color: var(--spectrum-radio-emphasized-circle-border-color-error);
+      }
     }
     .spectrum-Radio-label {
       color: var(--spectrum-radio-emphasized-circle-border-color-error);
@@ -109,7 +132,9 @@ governing permissions and limitations under the License.
 
 .spectrum-Radio-input {
   &:disabled + .spectrum-Radio-button {
-    border-color: var(--spectrum-radio-emphasized-circle-border-color-disabled) !important;
+    &:before {
+      border-color: var(--spectrum-radio-emphasized-circle-border-color-disabled) !important;
+    }
   }
 
   &:disabled ~ .spectrum-Radio-label {
@@ -123,7 +148,9 @@ governing permissions and limitations under the License.
   & .spectrum-Radio-input:focus-ring,
   &:hover .spectrum-Radio-input:focus-ring {
     & + .spectrum-Radio-button {
-      border-color: var(--spectrum-radio-circle-border-color-key-focus);
+      &:before {
+        border-color: var(--spectrum-radio-circle-border-color-key-focus);
+      }
       &:after {
         box-shadow: 0 0 0 var(--spectrum-button-primary-focus-ring-size-key-focus) var(--spectrum-button-primary-focus-ring-color-key-focus);
       }
